--- a/hw2/mainwindow.ui
+++ b/hw2/mainwindow.ui
@@ -61,6 +61,9 @@
            <property name="pageStep">
             <number>1</number>
            </property>
+           <property name="value">
+            <number>2</number>
+           </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -81,12 +84,12 @@
             </size>
            </property>
            <property name="text">
-            <string>5 Sim Steps per Second</string>
+            <string>10 Sim Steps per Second</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QToolButton" name="toolButton">
+          <widget class="QToolButton" name="graph_button">
            <property name="text">
             <string>Graph...</string>
            </property>
@@ -136,6 +139,9 @@
          <property name="singleStep">
           <double>0.100000000000000</double>
          </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
         </widget>
        </item>
        <item>
@@ -177,6 +183,9 @@
          </property>
          <property name="singleStep">
           <double>0.100000000000000</double>
+         </property>
+         <property name="value">
+          <double>2.000000000000000</double>
          </property>
         </widget>
        </item>
@@ -341,7 +350,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <customwidgets>
   <customwidget>
